# qt_opengl_wearglasses

./: .gitignore  68points.h  CMakeLists.txt  Camera.h  LICENSE  MainGlwight.h  Mesh.h  Model.h  README.md  Shader.h  button_setting.h  fit_model.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  points_68.h  related_opengl.h  shader (copy).fs  shader (copy).vs  shader.fs  use_camera.cpp  use_camera.h
doc/: Doxyfile
doc/html/: _c_make_lists_8txt.html  _camera_8h.html  _camera_8h.js  _camera_8h__dep__incl.map  _camera_8h__dep__incl.md5  _camera_8h__incl.map  _camera_8h__incl.md5  _camera_8h_source.html  _main_glwight_8h.html  _main_glwight_8h__dep__incl.map  _main_glwight_8h__dep__incl.md5  _main_glwight_8h__incl.map  _main_glwight_8h__incl.md5  _main_glwight_8h_source.html  _mesh_8h.html  _mesh_8h.js  _mesh_8h__incl.map  _mesh_8h__incl.md5  _mesh_8h_source.html  _model_8h.html  _model_8h.js  _model_8h__dep__incl.map  _model_8h__dep__incl.md5  _model_8h__incl.map  _model_8h__incl.md5  _model_8h_source.html  _r_e_a_d_m_e_8md.html  _shader_8h.html  _shader_8h__dep__incl.map  _shader_8h__dep__incl.md5  _shader_8h__incl.map  _shader_8h__incl.md5  _shader_8h_source.html  annotated.html  annotated_dup.js  class_camera-members.html  class_camera.html  class_camera.js  class_main_glwight-members.html  class_main_glwight.html  (+144 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+52 more)
doc/latex/: 68points_8h.tex  _c_make_lists_8txt.tex  _camera_8h.tex  _camera_8h__dep__incl.md5  _camera_8h__incl.md5  _main_glwight_8h.tex  _main_glwight_8h__dep__incl.md5  _main_glwight_8h__incl.md5  _mesh_8h.tex  _mesh_8h__incl.md5  _model_8h.tex  _model_8h__dep__incl.md5  _model_8h__incl.md5  _r_e_a_d_m_e_8md.tex  _shader_8h.tex  _shader_8h__dep__incl.md5  _shader_8h__incl.md5  annotated.tex  button__setting_8h.tex  button__setting_8h__incl.md5  class_camera.tex  class_main_glwight.tex  class_main_glwight__coll__graph.md5  class_main_glwight__inherit__graph.md5  class_main_window.tex  class_main_window__inherit__graph.md5  class_mesh.tex  class_mesh__coll__graph.md5  class_mesh__inherit__graph.md5  class_model.tex  class_model__coll__graph.md5  class_my_camera.tex  class_shader.tex  class_shader__inherit__graph.md5  classfit__model.tex  classfit__model__coll__graph.md5  classpoints__68.tex  classpoints__68__coll__graph.md5  dir_13e138d54eb8818da29c3992edef070a.tex  dir_446309a4385e5ebdfaec48f81420ba8e.tex  (+35 more)
texture/: glasses1.mtl  out.mtl  out.txt
